# watcher

./: .eslintrc.yml  .gitignore  Cargo.toml  index.d.ts  package.json  tsconfig.json
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
shell_script/: bench.sh  build.sh  build_with_rust_bindings.sh  fresh_clean.sh  prePublish.sh
src/: index.ts
src/lib/rs/: crc32.ts
src/lib/rs/crc32/: Cargo.toml
src/lib/rs/crc32/src/: lib.rs
src/lib/watcher/: main.ts
src/lib/watcher/constant/: crc32_table.ts
src/lib/watcher/functions/: hashes.ts
src/lib/watcher/threads/: crc32.ts  integrity.ts  watch.ts
src/tests/: index.ts
src/utils/: compile-rust-bindings.ts
utils/: Cargo.toml
